Refactor backend for API-agnostic helpers, update README, and improve Docker/dev workflow and frontend visuals
- Refactored backend helper names for API-agnostic architecture:
  - Renamed leonardoApiCall.js to imageGenerationApi.js for generic image generation.
  - Renamed openAiApiCall.js to textGenerationApi.js for generic text generation.
  - Updated all imports and references to use new helper names.

- Updated documentation:
  - Revised main README.md to reflect new API-agnostic helper names and architecture.
  - Clarified that image and text generation can be powered by any provider (currently Replicate, Supabase, OpenAI).
  - Updated Features, Technologies Used, and API Documentation sections.

- Refactored backend image generation and storage:
  - Removed all Leonardo-specific logic, helpers, and references (including generationId, leoGenRecord, and leonardoApiGetPhoto.js).
  - Updated /generatebreed route to use the new imageGenerationApi helper, storing generated image public URL from Supabase in generated_photo_link.
  - Cleaned up and simplified data flow for image generation and storage.

- Fixed SQL insert bug in add_new_generated_dog.js:
  - Matched number/order of columns and values in generated_breeds insert.
  - Removed playfulness from insert as it is not used in the app state.

- Improved Docker development workflow:
  - Ensured proper volume mounts for both client and server containers.
  - Clarified and fixed mounting of client/public/mock_dogs for server access.
  - Added/verified nodemon for backend hot reload; confirmed Vite handles frontend hot reload.
  - Provided guidance and fixes for live code reloading in Docker.

- Enhanced frontend Card component and styles:
  - Added and debugged holo shimmer effect overlay for card images.
  - Fixed image sizing and shimmer overlay to prevent cropping and border overlap.
  - Improved SCSS for Card and shimmer effect, ensuring visual consistency.

- General cleanup and bugfixes:
  - Removed unused o

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - "5173:5173"                     # Map port 3000 for React app
     environment:
       NODE_ENV: development             # Set the environment to development
+      VITE_APP_API_BASE_URL: http://server:8088
     command: npm run dev -- --host 0.0.0.0             # Start the React app with hot-reloading
     stdin_open: true                    # Required for interactive use
     tty: true                           # Ensure the container doesn't stop immediately
@@ -22,10 +23,13 @@ services:
     volumes:
       - ./server:/app                   # Mount the server directory to /app in the container
       - /app/node_modules                # Avoid overwriting node_modules in the container
+      - ./client/public/mock_dogs:/client/public/mock_dogs
     ports:
-      - "8088:8088"                     # Adjust based on your server's exposed port
+      - "8088:8088" 
+    env_file:
+      - ./server/.env   
     environment:
-      NODE_ENV: development             # Set the environment to development
+      NODE_ENV: development 
     command: npm run dev                # Use nodemon to restart the server on file changes
     stdin_open: true                    # Required for interactive use
     tty: true                           # Ensure the container doesn't stop immediately
