--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-session": "^1.17.3",
     "openai": "^4.20.1",
     "react-router-dom": "^6.20.0",
+    "replicate": "^1.0.1",
     "sass": "^1.69.5",
     "vite": "^5.0.10"
   }
