--- a/server/package.json
+++ b/server/package.json
@@ -5,25 +5,30 @@
   "main": "server.js",
   "scripts": {
     "start": "node src/server.js",
-    "local": "nodemon src/server.js", 
+    "local": "nodemon src/server.js",
     "dev": "nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
+    "@supabase/supabase-js": "^2.50.0",
     "api": "^6.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
+    "node-fetch": "^2.7.0",
     "pg": "^8.11.3",
-    "uniqid": "^5.4.0"
+    "replicate": "^1.0.1",
+    "uniqid": "^5.4.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express-session": "^1.17.3",
-    "nodemon": "^2.0.20",
+    "nodemon": "^2.0.22",
     "openai": "^4.20.0"
   }
 }
