--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "ISC",
   "engines": {
-    "node": "18"
+    "node": ">=18.17.0"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
@@ -24,6 +24,7 @@
     "node-fetch": "^2.7.0",
     "pg": "^8.11.3",
     "replicate": "^1.0.1",
+    "stream": "^0.0.2",
     "uniqid": "^5.4.0",
     "uuid": "^11.1.0"
   },
