--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,8 @@
   "author": "",
   "license": "ISC",
   "engines": {
-    "node": ">=18.17.0"
+    "node": ">=18.17.0",
+    "npm": ">=9.0.0"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
