--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "api": "^6.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "form-data": "^4.0.3",
     "morgan": "^1.10.0",
     "node-fetch": "^2.7.0",
     "pg": "^8.11.3",
