--- a/package.json
+++ b/package.json
@@ -19,11 +19,16 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": ">=18.17.0",
+    "npm": ">=9.0.0"
+  },
   "dependencies": {
     "@vitejs/plugin-react": "^4.2.1",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express-session": "^1.17.3",
+    "form-data": "^4.0.3",
     "openai": "^4.20.1",
     "react-router-dom": "^6.20.0",
     "replicate": "^1.0.1",
